--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-<h1>hi</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Puja Personal Website</title>
+		<link href="puja.css" rel="stylesheet">
+	</head>
+	<body>
+	<div class="container1">
+		<div class="container">
+		<header>
+		<div class="logo"><a href="index.html">PuJa Kumari Raut</a></div>
+		<nav>
+			<ul>
+			<li><a href="index.html">Home<a></li>
+			<li><a href="about.html">About<a></li>
+			<li><a href="port.html">Portfolio<a></li>
+			<li><a href="test.html">Testimonial<a></li>
+			<li><a href="contact.html">Contact Us<a></li>
+			</ul>
+			</nav>
+		</header>
+		
+		</div>
+		</div>
+		<div class="container1">
+		<div class="banner">
+			<div class="banner_in">
+				
+				<div class="banner-text">
+						Hi, I am Puja Kumari Raut,
+						
+						</div>
+					<div class="banner-text1">
+						A Creative Full stack .Net Core Developer
+					</div>
+					<div class="banner-text2">
+						& Designer
+					</div>
+			</div>
+			
+		</div>
+		<div class="container2">
+		<div class="container">
+		<footer>
+		<div class="form">
+		<h2><a href="contact.html">Want To Hire Me</a></h2>
+		
+		</div>
+		@Copy Right 2020 Developed BY Puja Kumari Raut
+		</footer>
+		</div>
+		</div>
+	</body>
+</html>
