--- a/index.html
+++ b/index.html
@@ -1,55 +1,202 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Puja Personal Website</title>
-		<link href="puja.css" rel="stylesheet">
-	</head>
-	<body>
-	<div class="container1">
-		<div class="container">
-		<header>
-		<div class="logo"><a href="index.html">PuJa Kumari Raut</a></div>
-		<nav>
-			<ul>
-			<li><a href="index.html">Home<a></li>
-			<li><a href="about.html">About<a></li>
-			<li><a href="port.html">Portfolio<a></li>
-			<li><a href="test.html">Testimonial<a></li>
-			<li><a href="contact.html">Contact Us<a></li>
-			</ul>
-			</nav>
-		</header>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>RESIDENTIAL DESIGNING</title>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+<body>
+<nav class="navbar navbar-default">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">RESIDENTIAL DESIGNING</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">GET STARTED</a></li>
+                <li><a href="#">HOW IT WORKS</a></li>
+                <li><a href="#">DESIGN PACKAGES</a></li>
+
+                <li><a class="navbar-brand1" href="#"> <i class="fas fa-user-circle"></i>  Log in</a></li>
+
+
+            </ul>
+
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+<div class="container">
+	<div class="row pb-5 text-center mt-5">
+	<span style="font-size:42px;">LOVE YOUR LANDSCAPE</span>
+	</div>
+	</div>
+	<div class="container">
+	<div class="row text-center pt-5 clearfix">
+	<span style="font-size: 17px">Dig in with a professional designer to create your perfect outdoor space all <span style="font-weight:bold; font-size: 20px">ONLINE</span></span>
+		</div>
+		</div>
+<section id="home">
+	<div class="container">
+		<div class="row text-center okb p-5">
+		<div class="btn btn-primary uzz"><a href="#">Get started</a></div>
+		</div>
+	</div>
+</section>
+<section class="container-fluid bg1">
+<div class="container text-center">
+<h1>HOW IT WORKS</h1>
+</div>
+</section>
+<section class="container-fluid bg2">
+<div class="row line"></div>
+<div class="container spanf">
+<div class="row text-center">Five Steps To Your New Yard</div>
+</div>
+</section>
+
+<div class="container-fluid fimg text-center">
+<div class="row">
+<div class="col-md-2 col-md-offset-1"><img src="https://static.wixstatic.com/media/18002b_caa32bc13f9e433ab2f83c5df5ae5a77~mv2.jpg/v1/fill/w_239,h_239,al_c,q_80,usm_0.66_1.00_0.01/CLIP%2BBOARD_2.webp"></div>
+<div class="col-md-2"><img src="https://static.wixstatic.com/media/18002b_f4802cbb31df478fac0b13baf1c974b1~mv2.jpg/v1/fill/w_239,h_239,al_c,q_80,usm_0.66_1.00_0.01/LANDSCAPE.webp"></div>
+<div class="col-md-2"><img src="https://static.wixstatic.com/media/18002b_c9c0f5adedb74223a82d77496c1a4481~mv2.jpg/v1/fill/w_239,h_239,al_c,q_80,usm_0.66_1.00_0.01/SPEECH%2BBUBBLES_2.webp"></div>
+<div class="col-md-2"><img src="https://static.wixstatic.com/media/18002b_60c58f46b0354d64b18dbc7a6baeff7c~mv2.jpg/v1/fill/w_239,h_239,al_c,q_80,usm_0.66_1.00_0.01/PLANT%2BDELIVERY_2.webp"></div>
+<div class="col-md-2"><img src="https://static.wixstatic.com/media/18002b_02d6e98b8b5a4f1a95c8d5d3610a708c~mv2.jpg/v1/fill/w_239,h_239,al_c,q_80,usm_0.66_1.00_0.01/INSTALL.webp"></div>
+
+</div>
+</div>
+
+<div class="container-fluid htext text-center pl-4">
+<div class="row">
+
+		<div class="col-md-2">
+		
+		<h3>INTAKE SURVEY</h3>
+		<p>Complete Residential Designing's
+		intake survey and start the
+		personalized process.</p>
 		
 		</div>
-		</div>
-		<div class="container1">
-		<div class="banner">
-			<div class="banner_in">
-				
-				<div class="banner-text">
-						Hi, I am Puja Kumari Raut,
-						
-						</div>
-					<div class="banner-text1">
-						A Creative Full stack .Net Core Developer
-					</div>
-					<div class="banner-text2">
-						& Designer
-					</div>
-			</div>
-			
-		</div>
-		<div class="container2">
-		<div class="container">
-		<footer>
-		<div class="form">
-		<h2><a href="contact.html">Want To Hire Me</a></h2>
 		
+		<div class="col-md-3">
+		<div class="caption">
+		<h3>SPACE ASSESSMENT</h3>
+		<p>Share your specific vision, environmental factors and functional needs.</p>
 		</div>
-		@Copy Right 2020 Developed BY Puja Kumari Raut
-		</footer>
+		</div>
+		
+		<div class="col-md-3">
+		<div class="caption">
+		<h3>PERSONAL CONSULT</h3>
+		<p>Chat with a designer to dig in deeper.</p>
 		</div>
 		</div>
-	</body>
+		<div class="col-md-2">
+		<div class="caption">
+		<h3>PLAN DELIVERY</h3>
+		<p>Receive your custom plans by Residential Designing designers.</p>
+		</div>
+		</div>
+		<div class="col-md-2">
+		<div class="caption">
+		<h3>INSTALL WITH CONFIDENCE</h3>
+		<p>Whether you do it yourself or hire an installer, we’ll give you what you need.</p>
+		</div>
+		</div>
+  </div>
+</div>
+
+<section class="container-fluid texb">
+<div class="container text-center">
+<div class="btn btn-primary uzz"><a href="#">Get started</a></div>
+</div>
+</section>
+
+<section class="container-fluid bg11">
+<div class="container text-center">
+<h1>DESIGN PACKAGES</h1>
+</div>
+</section>
+<div class="row line"></div>
+<div class="container-fluid spanf">
+<div class="container">
+<div class="row text-center">Find Your Perfect Package</div>
+</div>
+</div>
+<div class="container puja text-center">
+<div class="row">
+<div class="col-md-3"><a href="#"><img src="https://static.wixstatic.com/media/18002b_99518a9fdb1e4aa49415a7f6df7171b1~mv2.png/v1/fill/w_280,h_571,al_c,lg_1,q_85/Consult.webp"></a>
+</div>
+<div class="col-md-3"><a href="#"><img src="https://static.wixstatic.com/media/18002b_682d6a8a3cb2480ca2d1c385d3b9ac07~mv2.png/v1/fill/w_279,h_570,al_c,lg_1,q_85/Front.webp"></a>
+</div>
+<div class="col-md-3"><a href="#"><img src="https://static.wixstatic.com/media/18002b_797c576e18be4ae393df59c66a1cd87b~mv2.png/v1/fill/w_274,h_570,al_c,q_85,usm_0.66_1.00_0.01/Back.webp"></a>
+</div>
+<div class="col-md-3"><a href="#"><img src="https://static.wixstatic.com/media/18002b_745d509259314c23af2d2c282c850fd6~mv2.png/v1/fill/w_279,h_571,al_c,lg_1,q_85/Full.webp"></a>
+</div>
+
+</div>
+</div>
+
+<section class="container-fluid texb">
+<div class="container text-center">
+<div class="btn btn-primary uzz"><a href="#">SELECT YOUR PACKAGE</a></div>
+</div>
+</section>
+
+<div class="container imgbt text-center">
+<h1>Sample "The Back" Package (+ 3D image)</h1>
+<div class="row text-center">
+<img src="https://static.wixstatic.com/media/18002b_dc8aa0bb6b5444a39ab67ac8934daec2~mv2.jpg/v1/fill/w_949,h_257,al_c,q_80,usm_0.66_1.00_0.01/package%20sample.webp">
+</div>
+</div>
+<div class="row line"></div>
+
+
+<div class="container imgbt text-center">
+<h1>Want More? Try These Additional Options!</h1>
+<div class="row syard text-center">
+<div class="col-md-7">
+<img src="https://static.wixstatic.com/media/18002b_91f73be2f3104711b5be8b4acb242bc1~mv2.jpg/v1/fill/w_620,h_371,al_c,lg_1,q_80/side%2Byard%2Bdesign.webp">
+</div>
+<div class="col-md-3">
+<div class="row"><h1>SIDE YARD</h1></div>
+<div class="row"><p>Incorporate the side of your house into your design package.</p></div>
+</div>
+
+</div>
+</div>
+
+
+
+<!--<section class="container-fluid bg2">
+--><div class="row line"></div>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+</body>
 </html>
