--- a/get-started.html
+++ b/get-started.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
      <link rel="stylesheet" href="flag16.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="puja.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -842,7 +842,7 @@
                 });
                 //# sourceURL=pen.js
             </script>
- 
+ <div class="grouppu"></div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
