--- a/scarvesluxury..html
+++ b/scarvesluxury..html
@@ -20,7 +20,7 @@
   <body>
    
    
-   <nav class="navbar navbar-default pmenu">
+   <nav class="navbar navbar-default pmenu navbar-fixed-top">
   <section class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
