--- a/raphael.html
+++ b/raphael.html
@@ -81,7 +81,7 @@
     <div class="col-md-5">
     </div>
     <div class="col-md-3">
-    <img src="img/slidet.png">
+    <img src="slidet.png">
     </div>
     <div class="col-md-4">
     </div>
