--- a/raphael.html
+++ b/raphael.html
@@ -117,7 +117,7 @@
               <div class="product-content imgs1">
                <!-- <h4><a href="product-single.html">Reef Boardsport</a></h4>
                 <p class="price">$200</p>-->
-               <img class="img-responsive" src="img/button3.png" alt="product-img">
+               <img class="img-responsive" src="button3.png" alt="product-img">
               </div>
             </div>
           </div>
